Db column updates (#35)
* changed columns in database tables

* fixed column name in the get_values function

* fixed models

--- a/alembic/README
+++ b/alembic/README
@@ -1,1 +1,11 @@
 Generic single-database configuration.
+
+### Create a new migration
+```
+alembic revision -m "message that describes a new migration"
+```
+
+### Run migrations
+```
+alembic upgrade head
+```
